add download notification module

--- a/app/src/main/assets/config.ini
+++ b/app/src/main/assets/config.ini
@@ -1,8 +1,8 @@
 {"config":
 	{
-	    "gameCenterUrl":"http://nanohome.cn/launcher/searchPageWithStats/index.html",
+	    "gameCenterUrl":"http://nanohome.cn:3000/index/casual",
 	    "gameUrl":"http://games.softgames.de/fly-with-rope/?locale=en&p=cooee.cn",
-	    "screenOrientation":"0",
+	    "screenOrientation":"1",
         "UMENG_APPKEY":"123456789",
         "UMENG_CHANNEL":"develop"
     }
