--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':downloaderlib')
 }
