--- a/downloaderlib/src/main/AndroidManifest.xml
+++ b/downloaderlib/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.cooeeui.downloaderlib">
 
@@ -5,5 +6,19 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <application>
+        <receiver
+                android:name="com.cooeeui.downloader.core.notification.AppStatusListenerReceiver"
+                android:enabled="true"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED"></action>
+                <action android:name="android.intent.action.PACKAGE_REPLACED"></action>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"></action>
+                <data android:scheme="package"></data>
+            </intent-filter>
+        </receiver>
+    </application>
 
 </manifest>
