Add Umeng analysis

--- a/app/src/main/assets/config.ini
+++ b/app/src/main/assets/config.ini
@@ -3,7 +3,7 @@
 	    "gameCenterUrl":"http://nanohome.cn:3000/index/casual",
 	    "gameUrl":"http://games.softgames.de/fly-with-rope/?locale=en&p=cooee.cn",
 	    "screenOrientation":"1",
-        "UMENG_APPKEY":"123456789",
-        "UMENG_CHANNEL":"develop"
+        "UMENG_APPKEY":"5704b38067e58e5f1e0019ab",
+        "UMENG_CHANNEL":"AGame"
     }
 }
