webview版本的新闻模板

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
     <!-- 友盟统计 umeng end -->
+
     <application
             android:name=".main.App"
             android:allowBackup="true"
@@ -18,7 +18,19 @@
             android:largeHeap="true"
             android:persistent="true"
             android:supportsRtl="true">
-        <activity
+
+        <activity android:name=".main.NewsActivity"
+                  android:launchMode="singleTask"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <!--<activity
                 android:name=".main.H5GameActivity"
                 android:launchMode="singleTask"
                 android:screenOrientation="portrait"
@@ -29,8 +41,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-        </activity>
-        <!--<activity
+        </activity>-->
+        <!--
+        <activity
                 android:name=".main.MyTestActivity"
                 android:launchMode="singleTask"
                 android:screenOrientation="portrait"
@@ -41,13 +54,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-        </activity>-->
-        <activity
+        </activity>
+        -->
+       <!-- <activity
                 android:name=".main.H5GameCenterActivity"
                 android:launchMode="singleTask"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme">
-        </activity>
+        </activity>-->
+
     </application>
 
 </manifest>
