--- a/app/src/main/assets/config.ini
+++ b/app/src/main/assets/config.ini
@@ -1,6 +1,6 @@
 {"config":
 	{
-	    "gameCenterUrl":"http://nanohome.cn:3000/index/action",
+	    "gameCenterUrl":"http://nano.visualizr.me/trending",
 	    "gameUrl":"http://games.softgames.de/fly-with-rope/?locale=en&p=cooee.cn",
 	    "screenOrientation":"1",
         "UMENG_APPKEY":"5704b38067e58e5f1e0019ab",
