改为新闻流使用，去除多线程下载模块。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':downloaderlib')
+    compile 'com.android.support:support-v4:23.2.0'
 }
