链接地址配置

--- a/app/src/main/assets/config.ini
+++ b/app/src/main/assets/config.ini
@@ -4,6 +4,8 @@
 	    "gameUrl":"http://games.softgames.de/fly-with-rope/?locale=en&p=cooee.cn",
 	    "screenOrientation":"1",
         "UMENG_APPKEY":"5704b38067e58e5f1e0019ab",
-        "UMENG_CHANNEL":"AGame"
+        "UMENG_CHANNEL":"AGame",
+        "news_url":"http://nano.visualizr.me/trending",
+        "news_notification_url":"http://server.visualizr.me/magazineServer/getNotificationObject?clientid=trending&baseruri=nano.visualizr.me"
     }
 }
