--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,14 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
     <!-- 友盟统计 umeng end -->
+
+    <!-- 友盟自更新 begin -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!-- 友盟自更新 end -->
+
     <application
             android:name=".main.App"
             android:allowBackup="true"
@@ -72,6 +78,19 @@
                 android:enabled="true"
                 android:exported="true">
         </service>
+
+
+        <!-- 友盟自更新 begin -->
+        <service
+                android:name="com.umeng.update.net.DownloadingService"
+                android:process=":DownloadingService">
+        </service>
+        <activity
+                android:name="com.umeng.update.UpdateDialogActivity"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
+        <!-- 友盟自更新 end -->
+
     </application>
 
 </manifest>
