更换链接，更换图标

--- a/app/src/main/assets/config.ini
+++ b/app/src/main/assets/config.ini
@@ -5,7 +5,7 @@
 	    "screenOrientation":"1",
         "UMENG_APPKEY":"5704b38067e58e5f1e0019ab",
         "UMENG_CHANNEL":"AGame",
-        "news_url":"http://nano.visualizr.me/trending",
-        "news_notification_url":"http://server.visualizr.me/magazineServer/getNotificationObject?clientid=trending&baseruri=nano.visualizr.me"
+        "news_url":"http://nanohome.cn/launcher/jump/jump_page.php",
+        "news_notification_url":"http://nanohome.cn/launcher/jump/jump_page_push.php"
     }
 }
