--- a/H5GameCenter/src/main/AndroidManifest.xml
+++ b/H5GameCenter/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity
                 android:name=".main.H5GameActivity"
                 android:launchMode="singleTask"
-                android:screenOrientation="portrait"
+                android:configChanges="orientation|keyboardHidden|screenSize"
                 android:theme="@style/GameTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
