--- a/News/build.gradle
+++ b/News/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.cooeeui.news"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 8
-        versionName "1.1.6"
+        versionCode 10
+        versionName "1.1.8"
         // dex突破65535的限制
         multiDexEnabled true
     }
@@ -38,4 +38,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:23.2.0'
+    compile project(':Pushlib')
 }
